Add test cases on MCPJdbcStatementExecutorTest